tests/require_expression_newline/error.txt
Parse error: ./tests/require_expression_newline/require_expression_newline.fae:4
 Expected newline but found "func"
  4|     func() func()
                ^^^^
